--- a/proje/templates/ekle.html
+++ b/proje/templates/ekle.html
@@ -6,10 +6,13 @@
         form {
 
             padding: 20px;
+            margin: 40px;
             background-color: rgba(100, 100, 100, 0.1);
             border: 2px solid rgba(0, 0, 0, 0.1);
             border-bottom: 2px solid rgba(0, 0, 0, 0.2);
             text-align: center;
+            color: rgb(100, 100, 100);
+            
         }
 
         input {
@@ -52,6 +55,6 @@
         <br><br>
         <button>Ekle</button>
         <!--  <input type="submit" value="Ekle"> -->
-        </form>
+    </form>
 </body>
 </html>
