--- a/proje/templates/duzenle.html
+++ b/proje/templates/duzenle.html
@@ -1,23 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Duzenle</title>
+    <style>
+        form {
+
+padding: 20px;
+margin: 40px;
+background-color: rgba(100, 100, 100, 0.1);
+border: 2px solid rgba(0, 0, 0, 0.1);
+border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+text-align: center;
+color: rgb(100, 100, 100);
+
+}
+
+input {
+width: 300px;
+height: 25px;
+}
+
+button {
+
+border: none;
+width: 30px;
+height: 30px;
+}
+button:hover {
+
+color: rgb(100, 100, 100);
+}
+    </style>
 </head>
 <body>
-    <h1>Notu Duzenle</h1>
+    
 
-    <form action="notuduzenle/{{ notlar.id }}" method="post">
+
+<form action="notuduzenle/{{ notlar.id }}" method="post">
+    <h1>Notu Düzenle</h1>
+    <hr>
     {% csrf_token %}
-    Başlık:<br>
+    Başlık:  (30 karakter)<br>
     <input name="baslik" value="{{ notlar.baslik }}">
     <br><br>
-    İçerik:<br>
+    İçerik:  (255 karakter)<br>
     <input name="icerik" value="{{ notlar.icerik }}">
-    <br><br>
-    <input type="submit" value="Tamam">
+        <br><br>
+        <button>
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-check-square" viewBox="0 0 16 16">
+                <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                <path d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.235.235 0 0 1 .02-.022z"/>
+              </svg>
+        </button>
+        <!--  <input type="submit" value="Ekle"> -->
     </form>
+
 </body>
 </html>
