--- a/proje/templates/ekle.html
+++ b/proje/templates/ekle.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <style>
 
         form {
@@ -22,16 +23,13 @@
 
         button {
 
-            background-color: rgba(100, 100, 100,0.7);
             border: none;
-            width: 50px;
-            height: 25px;
-            color: white;
-            
+            width: 30px;
+            height: 30px;
         }
         button:hover {
 
-            background-color: rgba(100, 100, 100,0.9);
+            color: rgb(100, 100, 100);
         }
 
 
@@ -53,7 +51,12 @@
         İçerik:  (255 karakter)<br>
         <input name="icerik">
         <br><br>
-        <button>Ekle</button>
+        <button>
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
+            <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+            </svg>
+        </button>
         <!--  <input type="submit" value="Ekle"> -->
     </form>
 </body>
