--- a/proje/templates/index.html
+++ b/proje/templates/index.html
@@ -1,32 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<style>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Anasayfa</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-    h4 { background-color: rgba(20, 20, 20, 0.1); width: 400px; border: 3px solid rgba(20, 20, 20, 0.3); border-radius: 20px; padding: 5px; }
-    p { background-color: rgba(20, 20, 20, 0.1); border: 1px solid rgba(20, 20, 20, 0.5) ; border-radius: 10px; padding: 3px;}
-    a:hover { text-decoration: none;  }
-    a:active { text-decoration: none; }
-    a:visited { text-decoration: none; }
-</style>
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anasayfa</title>
+    <style>
+
+        .baslik {
+
+            margin: 10px;
+
+        }
+
+        .row {
+
+            padding: 20px;
+            margin: 40px;
+            background-color: rgba(100, 100, 100, 0.1);
+            border: 2px solid rgba(0, 0, 0, 0.1);
+            border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+            color: rgb(100, 100, 100);
+        }
+
+        .col-md{
+            min-height: 100px;
+            max-height: 200px;
+            background-color: white;
+            border-radius: 1px;
+            border: 1px solid;
+            font-size: large;
+            color: black;
+        }
+        .sil {
+
+            color: red;
+            text-decoration: none;
+            width: 20px;
+            height: 20px;
+        }
+
+        .duzenle {
+
+            text-decoration: none;
+            color: rgba(0, 0, 0, 0.767);
+        }
+
+        .ekle {
+            
+            text-decoration: none;
+            color: rgba(100, 100, 100,0.7);
+        }   
+
+        a:hover {
+            color: black;
+        }
+
+    </style>
 </head>
-<body>
+<body style="background-color: rgba(255, 255, 255, 0.632); color: white;" >
     
-    <h1>Notlar</h1>
-    <h3>Silmek istediğiniz notun başlığına tıklamanız yeterli!</h3>
-    <h3>Duzenlemek istediğiniz notun içeriğine tıklamanız yeterli!</h3>
-    <a href="ekle" title="Not Ekle"><h3>Ekle</h3></a>
+    
+    <div class="row">
+        <h1 class="baslik">
+            <a href="ekle" title="Not Ekle" class="ekle" >
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
+                    <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                  </svg>
+            </a>
+            Notlar
+        </h1>
+        <hr>
     {% for i in notlar %}
-    <!--<tr>-->
-        <a href="sil/{{i.id}}">Sil : </a> {{ i.baslik }}
-        <a href="duzenle/{{i.id}}"><p>{{ i.icerik }}</p></a>
+        <a href="sil/{{i.id}}" class="sil" title="Notu Sil">
         
-    <!--<tr>-->
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+            </svg>
+        </a> 
+        <br>
+        <br>
+        <br>
+        <div class="col-md">
+            {{ i.baslik }}
+            <hr>
+            <a href="duzenle/{{i.id}}" class="duzenle" title="Notu Düzenle"><p>{{ i.icerik }}</p></a>
+        </div>
     {% endfor %}
+    </div>
 
 </body>
 </html>
