--- a/proje/templates/ekle.html
+++ b/proje/templates/ekle.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Not Ekle</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
     <style>
-
-        form {
-
-            padding: 20px;
-            margin: 40px;
-            background-color: rgba(100, 100, 100, 0.1);
-            border: 2px solid rgba(0, 0, 0, 0.1);
-            border-bottom: 2px solid rgba(0, 0, 0, 0.2);
-            text-align: center;
-            color: rgb(100, 100, 100);
-            
-        }
 
         input {
             width: 300px;
-            height: 25px;
         }
 
         button {
@@ -27,37 +19,44 @@
             width: 30px;
             height: 30px;
         }
+
         button:hover {
 
-            color: rgb(100, 100, 100);
+            color: gray;
         }
 
+        .container {
+
+            border: 2px solid rgba(0, 0, 0, 0.1);
+            border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+            color: rgb(100, 100, 100);
+        }   
 
     </style>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Not Ekle</title>
+
 </head>
 <body>
 
-    <form action="notekle" method="post">
-        <h1>Not Ekle</h1>
-        <hr>
-        {% csrf_token %}
-        Başlık:  (30 karakter)<br>
-        <input name="baslik">
-        <br><br>
-        İçerik:  (255 karakter)<br>
-        <input name="icerik">
-        <br><br>
-        <button>
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
-            <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
-            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-            </svg>
-        </button>
-        <!--  <input type="submit" value="Ekle"> -->
-    </form>
+    <div class="container bg-light m-5 p-5" style="text-align: center;">
+        <div class="row">
+            <form action="notekle" method="post">
+                <h1>Not Ekle</h1>
+                <hr>
+                {% csrf_token %}
+                Başlık:  (30 karakter)<br>
+                <input name="baslik" required >
+                <br><br>
+                İçerik:  (255 karakter)<br>
+                <textarea name="icerik" id="icerik" cols="30" rows="10" style="width: 300px;" required></textarea>
+                <br><br>
+                <button>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
+                    <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                    </svg>
+                </button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
