--- a/proje/templates/index.html
+++ b/proje/templates/index.html
@@ -9,89 +9,93 @@
 
     <style>
 
-        .baslik {
+        .container {
 
-            margin: 10px;
-
-        }
-
-        .row {
-
-            padding: 20px;
-            margin: 40px;
-            background-color: rgba(100, 100, 100, 0.1);
             border: 2px solid rgba(0, 0, 0, 0.1);
             border-bottom: 2px solid rgba(0, 0, 0, 0.2);
             color: rgb(100, 100, 100);
         }
 
-        .col-md{
-            min-height: 100px;
-            max-height: 200px;
-            background-color: white;
-            border-radius: 1px;
-            border: 1px solid;
-            font-size: large;
+        .ekle {
+
             color: black;
         }
+
         .sil {
 
             color: red;
-            text-decoration: none;
-            width: 20px;
-            height: 20px;
         }
-
-        .duzenle {
-
-            text-decoration: none;
-            color: rgba(0, 0, 0, 0.767);
-        }
-
-        .ekle {
-            
-            text-decoration: none;
-            color: rgba(100, 100, 100,0.7);
-        }   
 
         a:hover {
-            color: black;
+            color: gray;
         }
 
     </style>
 </head>
-<body style="background-color: rgba(255, 255, 255, 0.632); color: white;" >
-    
-    
-    <div class="row">
-        <h1 class="baslik">
+<body>
+
+<!-- yeni -->
+
+    <div class="container bg-light m-5 p-5 c-gray">
+
+        <h1 class="row">
+            <div class="col">
             <a href="ekle" title="Not Ekle" class="ekle" >
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
                     <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
                   </svg>
             </a>
-            Notlar
+            </div>
+            <div class="col">Notlar</div>
+            
         </h1>
         <hr>
-    {% for i in notlar %}
-        <a href="sil/{{i.id}}" class="sil" title="Notu Sil">
         
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-                <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
-            </svg>
-        </a> 
-        <br>
-        <br>
-        <br>
-        <div class="col-md">
-            {{ i.baslik }}
-            <hr>
-            <a href="duzenle/{{i.id}}" class="duzenle" title="Notu Düzenle"><p>{{ i.icerik }}</p></a>
-        </div>
-    {% endfor %}
-    </div>
+        {% for i in notlar %}
+        <div class="row my-4 p-4 h-25">
 
+            <div class="col-1">
+                <div style="margin-bottom: 25px; margin-top: 5px;">
+
+                    <a href="sil/{{i.id}}"  title="Notu Sil" class="sil">
+        
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                            <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                        </svg>
+                    </a> 
+
+                </div>
+                <div>
+
+                    <a href="duzenle/{{i.id}}" class="duzenle" title="Notu Düzenle">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+                            <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+                          </svg>
+                    </a>
+
+                </div>
+            </div>
+            <div class="col-8">
+
+                <div class="card">
+
+                    <div class="card-header">{{i.baslik}}</div>
+                    <div class="card-body">
+
+                        <p class="card-text">{{i.icerik}}</p>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+        {% endfor %}
+
+
+    </div>
 </body>
 </html>
