--- a/proje/templates/ekle.html
+++ b/proje/templates/ekle.html
@@ -43,12 +43,14 @@
                 <h1>Not Ekle</h1>
                 <hr>
                 {% csrf_token %}
-                Başlık:  (30 karakter)<br>
+                <label for="baslik">Başlık :</label>
                 <input name="baslik" required >
                 <br><br>
-                İçerik:  (255 karakter)<br>
-                <textarea name="icerik" id="icerik" cols="30" rows="10" style="width: 300px;" required></textarea>
+                <label for="icerik">İçerik :</label>
+                <textarea name="icerik" id="icerik" cols="10" rows="7" style="width: 300px;" required></textarea>
                 <br><br>
+                <label for="tarih">Tarih : </label>
+                <input type="date" name="tarih" id="tarih" > <br><br>
                 <button>
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
