--- a/proje/templates/index.html
+++ b/proje/templates/index.html
@@ -36,7 +36,7 @@
 
 <!-- yeni -->
 
-    <div class="container bg-light m-5 p-5 c-gray">
+    <div class="container bg-light mx-auto my-5 px-5 py-5 c-gray w-auto">
 
         <h1 class="row">
             <div class="col">
@@ -53,10 +53,10 @@
         <hr>
         
         {% for i in notlar %}
-        <div class="row my-4 p-4 h-25">
+        <div class="row my-4 p-3">
 
             <div class="col-1">
-                <div style="margin-bottom: 25px; margin-top: 7px;">
+                <div style="margin-bottom: 25px; margin-top: 15px;">
 
                     <a href="sil/{{i.id}}"  title="Notu Sil" class="sil">
         
@@ -77,9 +77,9 @@
 
                 </div>
             </div>
-            <div class="col-8">
+            <div class="col">
 
-                <div class="card w-450">
+                <div class="card">
 
                     <div class="card-header">
                         
